# STM32F103-RTIC-template

./: Cargo.toml  Embed.toml  README.md  cargo-generate.toml
.cargo/: config
my-project/: Cargo.toml
my-project/src/: main.rs
src/: main.rs
