[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2018"
readme = "README.md"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.4"
cortex-m-rtic = "0.5.5"
stm32f1 = "0.11.0"
embedded-hal = "0.2.3"
nb = "1.0.0"
volatile = "0.3.0"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["stm32f103", "rt", "stm32-usbd"]

[[bin]]
name = "{{ project-name }}"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z'
